# privacy-preserving-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: run_all.sh  run_fig2_heatmaps.py  run_fig3_5_ae_sweep.py  run_fig6_7_ensemble_sweep.py  run_table_iii.py
notebooks/: 00_orchestrator.ipynb
results/: fig3_5_ae_sweep.csv  fig6_7_ensemble_sweep.csv  table_iii.csv
src/: __init__.py  utils.py
src/analysis/: __init__.py  correlation.py  plots.py
src/attacks/: __init__.py  mia_aggregated.py  mia_gap.py
src/data/: __init__.py  adult.py  cifar_hist.py  credit.py  health.py  preprocessing.py
src/models/: __init__.py
src/models/aggregation/: __init__.py  confidence_fusion.py  gnmax.py
src/models/autoencoders/: __init__.py  dp_vae.py  tab_dae.py  vanilla_ae.py
src/models/backbones/: __init__.py  _blocks.py  densenet_gn.py  dp_xgboost.py  pre_resnet.py  resnet_gn.py  wide_resnet.py
src/pipelines/: __init__.py  _common.py  ae_pipeline.py  ensemble_pipeline.py
src/privacy/: __init__.py  accountant.py  dp_sgd.py  gaussian.py  laplace.py
